@@ -30,9 +30,21 @@ Installation
 ------------
 
 Hovercraft requires Python 3 and can be installed like any Python package.
+
 The easiest way is to install pip_, and then run::
 
     $ pip3 install hovercraft
+
+* Installation on Ubuntu and Debian based computers:
+
+.. image:: https://img.youtube.com/vi/tHSJLF9OnKQ/0.jpg
+   :target: https://www.youtube.com/watch?v=tHSJLF9OnKQ
+
+* Installation on Windows:
+
+.. image:: https://img.youtube.com/vi/I63I8Az24d8/0.jpg
+   :target: https://www.youtube.com/watch?v=I63I8Az24d8
+
 
 Hovercraft is untested on Windows, but there is no reason it shouldn't work, at least in theory.
 
